--- a/webapp/src/main/webapp/pages/users.xhtml
+++ b/webapp/src/main/webapp/pages/users.xhtml
@@ -15,7 +15,7 @@
 
 			<p:fieldset id="users" legend="Users" style="margin-top:20px">
 
-				<p:commandButton update=":users"
+				<p:commandButton update=":createUserDialog"
 					oncomplete="createUserDialogWidget.show()" icon="ui-icon-document"
 					action="#{userBean.create}" />
 
