fixed powermeter creation dialog

--- a/webapp/src/main/webapp/pages/users.xhtml
+++ b/webapp/src/main/webapp/pages/users.xhtml
@@ -119,7 +119,7 @@
 
 				<p:fieldset legend="Unused Powermeters">
 
-					<p:commandButton update=":powerMetersForm:display"
+					<p:commandButton update=":createDialog"
 						oncomplete="createDialogWidget.show()" icon="ui-icon-document"
 						action="#{powerMeterBean.create}" />
 
